--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
   <title>WellSpa</title>
   <meta charset="utf-8">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+// Add the new slick-theme.css if you want the default styling
+<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 <svg version="1.1" style="display: none">
@@ -203,11 +209,26 @@
     <div class="reviews__content">
       <p class="reviews__name">Lorem ipsum</p>
       <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+
+      <div class="reviews__content">
+        <p class="reviews__name">Lorem ipsum</p>
+      <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+      <div class="reviews__content">
+        <p class="reviews__name">Lorem ipsum</p>
+        <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+      <div class="reviews__content">
+        <p class="reviews__name">Lorem ipsum</p>
+        <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
     </div>
+
+
   </section>
 
   <section class="contact">
     <h2 class="contact__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+
+
+
   </section>
 
   </main>
@@ -217,6 +238,12 @@
   <footer>
 
   </footer>
+
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script type="text/javascript" src="/js/custom.js"></script>
+
 </body>
 </html>
 
