--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-// Add the new slick-theme.css if you want the default styling
-<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
 
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-<svg version="1.1" style="display: none">
+  <svg version="1.1" style="display: none">
   <symbol viewBox="0 0 965 129" id="logo" xmlns="http://www.w3.org/2000/svg">
 
       <path d="M111.192 83.992C113.784 85.336 115.56 87.016 116.52 89.032C117.576 90.952 117.864 93.064 117.384 95.368C116.904 97.672 115.704 100.072 113.784 102.568C111.864 105.064 109.32 107.56 106.152 110.056C102.6 112.84 98.424 115.432 93.624 117.832C88.92 120.136 83.832 122.104 78.36 123.736C72.984 125.368 67.32 126.616 61.368 127.48C55.512 128.44 49.608 128.92 43.656 128.92C33.96 128.92 25.944 127.624 19.608 125.032C13.272 122.44 8.47199 119.08 5.20799 114.952C2.03999 110.824 0.359994 106.264 0.167994 101.272C-0.0240056 96.184 1.17599 91.192 3.76799 86.296C6.35999 81.4 10.296 76.888 15.576 72.76C20.952 68.632 27.576 65.368 35.448 62.968C40.536 61.528 45.384 60.712 49.992 60.52C47.976 59.848 45.912 58.936 43.8 57.784C41.688 56.536 39.768 55.144 38.04 53.608C36.312 52.072 34.92 50.392 33.864 48.568C32.904 46.648 32.52 44.632 32.712 42.52C33.096 38.392 34.488 34.552 36.888 31C39.288 27.448 42.312 24.232 45.96 21.352C49.704 18.472 53.88 15.976 58.488 13.864C63.192 11.656 67.944 9.87999 72.744 8.53599C77.64 7.09598 82.44 6.13598 87.144 5.65598C91.848 5.17598 96.12 5.12798 99.96 5.51198C105.528 6.18399 109.992 7.38399 113.352 9.11199C116.808 10.84 119.208 12.856 120.552 15.16C121.896 17.368 122.328 19.816 121.848 22.504C121.464 25.096 120.216 27.64 118.104 30.136C115.992 32.536 113.112 34.744 109.464 36.76C105.912 38.776 101.736 40.312 96.936 41.368C94.92 41.848 93.432 42.04 92.472 41.944C91.608 41.752 91.176 41.464 91.176 41.08C91.272 40.696 91.752 40.264 92.616 39.784C93.576 39.304 94.872 38.968 96.504 38.776C98.712 38.584 100.92 37.768 103.128 36.328C105.336 34.888 107.256 33.16 108.888 31.144C110.616 29.032 111.912 26.776 112.776 24.376C113.64 21.976 113.784 19.72 113.208 17.608C112.728 15.496 111.384 13.672 109.176 12.136C107.064 10.504 103.8 9.44798 99.384 8.96798C93.72 8.39198 87.768 8.77598 81.528 10.12C75.384 11.464 69.624 13.528 64.248 16.312C58.968 19 54.408 22.312 50.568 26.248C46.824 30.088 44.52 34.312 43.656 38.92C42.984 42.664 43.32 45.688 44.664 47.992C46.008 50.2 47.832 51.976 50.136 53.32C52.536 54.664 55.176 55.672 58.056 56.344C61.032 57.016 63.72 57.688 66.12 58.36C68.616 59.032 70.632 59.8 72.168 60.664C73.704 61.528 74.28 62.824 73.896 64.552C73.416 65.992 72.024 66.808 69.72 67C67.512 67.096 64.632 67.096 61.08 67C57.624 66.904 53.736 66.904 49.416 67C45.096 67.096 40.632 67.768 36.024 69.016C31.032 70.36 26.616 72.712 22.776 76.072C18.936 79.432 15.912 83.224 13.704 87.448C11.592 91.672 10.44 96.04 10.248 100.552C10.056 105.064 11.112 109.192 13.416 112.936C15.72 116.68 19.368 119.752 24.36 122.152C29.352 124.552 35.976 125.752 44.232 125.752C49.8 125.752 55.272 125.176 60.648 124.024C66.024 122.872 71.112 121.384 75.912 119.56C80.712 117.736 85.176 115.672 89.304 113.368C93.528 110.968 97.176 108.568 100.248 106.168C102.936 104.056 105.192 101.896 107.016 99.688C108.936 97.48 110.28 95.464 111.048 93.64C111.912 91.72 112.152 90.088 111.768 88.744C111.384 87.304 110.184 86.344 108.168 85.864C106.536 85.48 105.528 85.048 105.144 84.568C104.856 84.088 104.952 83.704 105.432 83.416C105.912 83.128 106.68 83.032 107.736 83.128C108.888 83.128 110.04 83.416 111.192 83.992Z" fill="white"/>
@@ -221,14 +220,38 @@
         <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
     </div>
 
+    
 
   </section>
 
   <section class="contact">
-    <h2 class="contact__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+    <div class="contact__wrapper">
+      <h2 class="contact__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+      <p class="contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+      <div class="contact__sub-wrapper">
+          <form class="contact__form">
+            <div class="contact__form__info">
+              <div class="contact__form__input-wrapper contact__form__name">
+              <input class="contact__form__input" type="text" placeholder="Имя">
+              </div>
+              <div class="contact__form__input-wrapper contact__form__phone">
+                <input  class="contact__form__input" type="text" placeholder="Номер телефона">
+              </div>
+            </div>
+            <div class="contact__form__select">
+              <select >
+                <option value="">Детский</option>
+                <option value="">Спортивный</option>
+              </select>
+            </div>
+            <input class="contact__form__text" type="text" placeholder="Текст">
+            <input type="submit" value="Send Message">  
+          </form>
+        <div class="contact__info">
 
-
-
+        </div>
+      </div>
+    </div>
   </section>
 
   </main>
