--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
 
 
 </head>
@@ -286,8 +286,8 @@
 
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-  <script type="text/javascript" src="/js/custom.js"></script>
+  <script type="text/javascript" src="../slick/slick.min.js"></script>
+  <script type="text/javascript" src="../js/custom.js"></script>
 
 </body>
 </html>
