--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
   </section>
 
   <section class="contact">
-    <div class="contact__wrapper">
+    <!-- <div class="contact__wrapper"> -->
       <h2 class="contact__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
       <p class="contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-      <div class="contact__sub-wrapper">
+      <div class="contact__wrapper">
           <form class="contact__form">
             <div class="contact__form__info">
               <div class="contact__form__input-wrapper contact__form__name">
@@ -259,7 +259,7 @@
           <!-- </div> -->
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </section>
 
   </main>
