--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <li><a href="" class="list-item">Отзывы</a></li>
         <li><a href="" class="list-item">Запись</a></li>
       </ul>
+      <div class="nav__button">adsdas</div>
     </nav>
     <section class="info">
       <div class="info__wrapper">
