--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 <header class="header-bar">
 
     <nav class="nav-bar">
+    <img src="/images/massage-session.svg" alt="">
+      <div class="nav__button">adsdas</div>
       <ul class="nav__list">
         <li><a href="" class="list-item">Главная</a></li>
         <li><a href="" class="list-item">Сертификаты</a></li>
@@ -79,7 +81,7 @@
         <li><a href="" class="list-item">Отзывы</a></li>
         <li><a href="" class="list-item">Запись</a></li>
       </ul>
-      <div class="nav__button">adsdas</div>
+    
     </nav>
     <section class="info">
       <div class="info__wrapper">
