--- a/massage.html
+++ b/massage.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="massage-page">
   <svg version="1.1" style="display: none">
     <symbol viewBox="0 0 965 129" id="logo" xmlns="http://www.w3.org/2000/svg" fill="">
 
@@ -69,120 +69,7 @@
       </div>
 
   </section>
-  <section class="services">
-    <div class="services__content">
-    <div class="services__wrapper item1" style="background: url(../images/img_1.jpg);"><p class="services__title">Антицелюлитный массаж</p>
-      <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-    <div class="button__wrapper">
-  <a href="massage.html" class="button services__button">
-    <span class="circle">
-      <span class="icon arrow"></span>
-    </span>
-    <span class="button-text">Подробнее</span>
-  </a>
-    </div>
-    </div>
-    <div class="services__wrapper item2">
-      <p class="services__title">Детский массаж</p>
-      <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="button__wrapper">
-  <a class="button services__button">
-    <span class="circle">
-      <span class="icon arrow"></span>
-    </span>
-    <span class="button-text">Подробнее</span>
-  </a>
-    </div>
-    </div>
-    </div>
-
-    <div class="services__content">
-    <div class="services__wrapper item3"><p class="services__title">Антицелюлитный массаж</p>
-      <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="button__wrapper">
-  <a class="button services__button">
-    <span class="circle">
-      <span class="icon arrow"></span>
-    </span>
-    <span class="button-text">Подробнее</span>
-  </a>
-    </div>
-    </div>
-    <div class="services__wrapper item4">
-      <p class="services__title">Детский массаж</p>
-      <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="button__wrapper">
-  <a class="button services__button">
-    <span class="circle">
-      <span class="icon arrow"></span>
-    </span>
-    <span class="button-text">Подробнее</span>
-  </a>
-    </div>
-    </div>
-    </div>
-
-    <div class="services__content">
-    <div class="services__wrapper item1"><p class="services__title">Антицелюлитный массаж</p>
-      <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="button__wrapper">
-  <a class="button services__button">
-    <span class="circle">
-      <span class="icon arrow"></span>
-    </span>
-    <span class="button-text">Подробнее</span>
-  </a>
-    </div>
-    </div>
-    <div class="services__wrapper item2">
-      <p class="services__title">Детский массаж</p>
-      <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="button__wrapper">
-  <a class="button services__button">
-    <span class="circle">
-      <span class="icon arrow"></span>
-    </span>
-    <span class="button-text">Подробнее</span>
-  </a>
-    </div>
-    </div>
-    </div>
-
-    <div class="button__wrapper--all">
-  <a class="button services__button--all">
-    <span class="circle">
-      <span class="icon arrow"></span>
-    </span>
-    <span class="button-text">Посмотреть все услуги</span>
-  </a>
-    </div>
-  </section>
-
-  <section class="reviews">
-    <h2 class="reviews__title">Отзывы</h2>
-    <div class="reviews__wrapper">
-    <div class="reviews__content">
-      <p class="reviews__name">Lorem ipsum</p>
-    <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-    <div class="reviews__content">
-      <p class="reviews__name">Lorem ipsum</p>
-      <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-    <div class="reviews__content">
-      <p class="reviews__name">Lorem ipsum</p>
-      <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-
-      <div class="reviews__content">
-        <p class="reviews__name">Lorem ipsum</p>
-      <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-      <div class="reviews__content">
-        <p class="reviews__name">Lorem ipsum</p>
-        <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-      <div class="reviews__content">
-        <p class="reviews__name">Lorem ipsum</p>
-        <p class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-    </div>
-
+ 
     
 
   </section>
